# monorepo

./: .configurevs.bat  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.adoc  README.md  bootstrap.bat  bootstrap.sh  build.bat  build.sh  config.yml  generate.bash  generate.sh  main.cpp  rungui.sh  runserver.sh  sample.yaml  sussybaka.sh  vcpkg.json
.github/workflows/: adoc-generate.yml
config/: labjack.yml  remote.yml  rocket.yml
config/labjacks/: fastjack.yml  slowjack.yml
config/sequences/: abort.yml  alternate_oxidizer.yml  cold_flow.yml  e-match.yml  igniter.yml  ignition.yml  oxidizer.yml  reset.yml  sample.yaml  stop.yml
cpp/: README.md
docs/: README.adoc  main-source.adoc  ubuntu-installation.adoc
docs/cmake/: cmake.adoc
docs/code/: cmake.adoc  proto.adoc
docs/ubuntu/: ubuntu-installation.adoc
engine-computer/: .buildvs.bat  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  proto.sh  vcpkg.json
engine-computer/config/: config.yml
engine-computer/include/mach/: broadcast.hpp  config_mapping.hpp  config_parser.hpp  device_manager.hpp  executor.hpp  grpc_client.hpp  gui.hpp  labjack.hpp  main.hpp  thread_safe_queue.hpp  util.hpp
engine-computer/include/mach/device/: device.hpp  device_manager.hpp  sensor.hpp  valve.hpp
engine-computer/include/mach/sequences/: action.hpp  action_factory.hpp  check_action.hpp  close_action.hpp  open_action.hpp  sequence.hpp  sequence_manager.hpp  sequence_parser.hpp  sleep_action.hpp
engine-computer/src/: broadcast.cpp  config_mapping.cpp  config_parser.cpp  device_manager.cpp  executor.cpp  grpc_client.cpp  gui.cpp  gui_client.cpp  labjack.cpp  main.cpp  main2.cpp  thread_safe_queue.cpp  util.cpp
engine-computer/src/device/: device.cpp  device_manager.cpp  sensor.cpp  valve.cpp
engine-computer/src/include/: config_mapping.hpp  config_parser.hpp  device_manager.hpp  labjack.hpp  util.hpp
engine-computer/src/include/device/: device.hpp  sensor.hpp  valve.hpp
engine-computer/src/include/sequences/: action.hpp  action_factory.hpp  close_action.hpp  open_action.hpp  sleep_action.hpp
engine-computer/src/proto/: Test.proto
engine-computer/src/sequences/: action.cpp  action_factory.cpp  check_action.cpp  close_action.cpp  open_action.cpp  sequence.cpp  sequence_parser.cpp  sleep_action.cpp
go/: CMakeLists.txt
go/src/: go.mod
go/src/cmd/: protoServer.go
go/src/rpcService/: server.go
go/src/state/: state.go
go/src/tcp/: server.go
gui/: display.py  main.py  requirements.txt
gui/rpcSimulator/: sim.py
protobuf/: README.md  main.proto  messages.proto  service.proto
src/: config_parser.cpp  labjack.cpp  labjack_manager.cpp  main.cpp  sensor.cpp  valve.cpp
src/device/: device.cpp
src/include/: config_parser.hpp  labjack.hpp  labjack_manager.hpp  sensor.hpp  util.hpp  valve.hpp
src/include/device/: sensor.hpp
teensy/: proto.sh
teensy/comms-teensy/src/: main.cpp
teensy/control-teensy/: platformio.ini
teensy/control-teensy/src/: main.cpp
